--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.1"
